<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDB5B5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:alpha="0.7"
        android:text="@string/welcomeMessage"
        android:textAllCaps="false"
        android:textColor="#630303"
        android:textSize="24sp"
        android:typeface="monospace"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:columnCount="2"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="0"
            android:text="@string/esfreutmich"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:layout_columnSpan="2"
            android:typeface="monospace"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="1"
            android:text="@string/GutenAbend"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="2"
            android:text="@string/GutenMorgen"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="3"
            android:text="@string/GutenTag"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="4"
            android:text="@string/Ichheisse"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="5"
            android:text="@string/WiegehtesIhnen"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="6"
            android:text="@string/AufWiedersehen"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="7"
            android:text="@string/Bitte"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="8"
            android:text="@string/Estutmirleid"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:alpha="0.8"
            android:background="#F4A4A4"
            android:onClick="playVoice"
            android:padding="5dp"
            android:tag="9"
            android:layout_columnSpan="2"
            android:text="@string/GuteNacht"
            android:textColor="#511C0B"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_column="0"
            app:layout_row="5" />


    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>